# apps.livebox.livebox

./: CMakeLists.txt  livebox.pc.in
TC/testcase/: Makefile  tslist  utc_livebox.c
doc/: livebox_doc.h
dynamicbox/: CMakeLists.txt  dynamicbox.pc.in
dynamicbox/doc/: dynamicbox_doc.h
dynamicbox/include/: debug.h  dlist.h  dynamicbox.h
dynamicbox/include/internal/: dynamicbox.h
dynamicbox/patch/: pixmap_ee.patch  pixmap_ee_dbox.patch
dynamicbox/src/: dlist.c  dynamicbox.c  snapshot_window.c  util.c  virtual_window.c  virtual_window_wayland.c
include/: debug.h  dlist.h  livebox.h  util.h
livebox/: CMakeLists.txt  livebox.pc.in
livebox/include/: dynamicbox.h  livebox.h  livebox_product.h
livebox/src/: livebox.c
packaging/: libdynamicbox.spec  liblivebox.spec
src/: dlist.c  livebox.c  snapshot_window.c  util.c  virtual_window.c  virtual_window_wayland.c
